--- a/ui/app/components/app/app-components.scss
+++ b/ui/app/components/app/app-components.scss
@@ -6,6 +6,7 @@
 @import 'app-header/index';
 @import 'asset-list-item/asset-list-item';
 @import 'confirm-page-container/index';
+@import 'confirmation-footer/confirmation-footer';
 @import 'connected-accounts-list/index';
 @import 'connected-accounts-permissions/index';
 @import 'connected-sites-list/index';
